--- a/homework1/homework1.Rmd
+++ b/homework1/homework1.Rmd
@@ -2,7 +2,7 @@
 title: "test"
 author: "Nicholas Nagle"
 date: "January 26, 2015"
-output: pdf_document
+output: html_document
 ---
 # INSTRUCTIONS:
 Edit this file by replacing the instructions with text and code to anser the questions.
@@ -10,45 +10,55 @@ I should be able to knit this file and reproduce the html, pdf, or word document
 
 A block to load in the data:
 ```{r}
+library(ggplot2)
 rm(list=ls()) # Clean the workspace to be empty
-arbuthnot <- read.csv('/Users/nnagle/Dropbox/git_root/homework/homework1/data/arbuthnot.csv')
+arbuthnot <- read.csv('~/Desktop/Geog 415/sselecm2/homework1/data/arbuthnot.csv')
 ```
 
 # Question 1
-This is a question about how the axes affects how we interpret plots.
+```{r}
+ggplot(data=arbuthnot) + 
+  geom_line(aes(x=Year, y=Males/Females))+ 
+  ylab('Male:Female Sex Ratio')
+  ggplot(data=arbuthnot) + 
+  geom_line(aes(x=Year, y=Males/Females))+
+  scale_y_continuous(limits=c(0, 1.5)) +
+  ylab('Male:Female Sex Ratio')
+```
 
-Create two plots of Male-Female Christenings, one in which the y-axis scale is set by default, and one in which the y-axis extends all the way to zero.  Yes, I know that was in the tutorial.  I want to see it here.
 
- - Describe the visual appearance of the two plots.  Do they "feel" like they describe the same data?  
- - Describe how you might be able to mislead readers by changing the scaling on graphs.  
- - Which plot seems more appropriate here?  Why?
+  
+  #The first plot seems to have many "ups and downs" while the second plot looks more simple with smaller undulations. They do not "feel" like they are describing the same data.
+  #You can mislead readers by changing the scaling on a graph very easily. By changing the scaling you can skew your data results whichever way you want them to appear. For instance if you chnage the x-axis to have data results by 100's instead of 10's, your graph will look a lot different. 
+  #The plot that seems more appropriate to me is the defualt plot. The reason I think this plot is more appropriate is because it is more detailed. The y-axis does not go all the way to zero, and it shows the male:female sex ratio with more precision than the other plot.
 
 # Question 2
-This question is designed to give you some practice with ggplot as well as describing plots in words.
+```{r}
+ggplot(data=arbuthnot)+geom_line(aes(x=Females, y=Males))+geom_abline(intercept=1, slope=1)
 
-Use ggplot to create a scatterplot that has Female christenings on the x-axis and Male christenings on the y-axis.  Draw a 45 degree line (using geom_abline) to show the line where Male and Female christenings are equal.  Use this figure to describe the relationship and distribution of Male and Female christenings.
+```
+
+ 
+  #Based on the scatter plot showing male and female christenings, we can see that more males are christened than females. By looking at the 45 degree line which shows equal male and female christenings, we notice that there are no points on this line that show male and female christening values to be equal. All of the values are above the 45 degree line, showing that there are more male christening values than female. 
+
 
 
 
 # Question 3
 
-This is a question about population, sample, representativeness and generalizability.
+  #I think the christenings-based sample would be similar to the births-based sample because most people in that time period had their babies christened. I think this fact is important because if someone were to have a baby they would most likely have their baby christened which would be a good representation for births.
+  #In my opinion I don't think a christenings based sample would be appropriate now in the 21st century. I think now in modern time many people have a wide array of belief systems so if somebody were to have a baby, they might not get it christened because of their religious view. Also, I think gender selective abortions and gendercide play a huge part in the sex ratio. 
 
-How do you think the christenings-based sample would compared to a births-based sample?  Similar?  Different?  Why?  Arbuthnot's data probably included most every christening in London during this period; they probably aren't any unreported christenings.  Is this fact important?  Why or why not?  Would a christenings based sample be appropriate now, in the 21st century?  (Hint, this last question is trickier than it might seem.  Think about what causes Male/Female Births, what causes people to christen their children, and any relations or not between these)
+
 
 # Question 4
-What does "sex ratio at birth" mean?  How does it depend on biology, cuture and technology.  Consider the three cases of 1) late 17th century England, 2) 21st century US, and China under the [one-child policy](http://en.wikipedia.org/wiki/One-child_policy).
 
+  #Sex ratio at birth means how many males born there are to females born. This is usually out of 100 females born. The sex ratio depends on many factors. Some of those factors include natural causes, sex-selective abortion, and gendercide. Considering the three cases listed, each one probably has a different sex ratio because of different causes. In late 17th century England, I think the sex ratio was based mostly on biological and natural factors. In the US during the 21st century a big factor impacting the sex ratio is sex-selective abortion, while China in the 21st century is heavily impacted by gendercide. 
 
 # Question 5
-The purpose of this quetion is to give you a little practice using standard deviation.
-
-a. The average height of young women ages 18-24 is 64.5 in.  The distribution of heights is approximately normal (Gaussian) with a standardard deviation of $\sigma=2.5$.  Complete this sentence: Approximately 95% of women have a height greater than ______ in and less than ______ in.
+ #59.5 in and 69.5 in 
 
 # Question 6
-The purpose of this question is to help you understand the variance.
 
-The formula for sample variance $\sigma^2$ of a dataset is:
-$$\frac{\sum_{i=1}^N (x_i - \bar{x})^2}{N-1}$$
-Describe in words what each part of this equation is, and using the concept of "distance" describe what the sample variance measures.
+  #x bar is the mean of x, while x_i is the individual value of x and N is the number of data points. By using this equation for the sample variance, you can measure how far a set of numbers is spread out from the expected value. 
 
